# edd

./: .bowerrc  .dockerignore  .flake8  .gitattributes  .gitconfig  .gitconfig.sh  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  Acknowledgements.md  Brewfile  Configuration.md  Contributing.md  Dockerfile  Dockerfile.dockerignore  Dockerprod  Figure_10_Assay_Creation.xlsx  Gruntfile.js  Jenkinsfile  LEGAL.txt  LICENSE.txt  Pipfile  README.md  apache.conf-sample  appserver_entrypoint.sh  convert.sql  docker-compose.override.yml-example  docker-compose.yml  docker-init.yml  docker-production.yml  entrypoint.sh  ice.yml  init-config.sh  karma.conf.js  karma.config.js  manage.py  mkdocs.requirements.txt  mkdocs.yml  (+8 more)
bower_components/jquery/: .bower.json
bower_components/tinymce/: .bower.json
celery/: README.md  requirements.txt
celery/debian/: edd_celeryd.config  edd_celeryd.script
celery/osx/: add_system_user.sh  com.rabbitmq.plist  org.celeryq.worker.plist
container-bin/: run_tests.sh
docker/: README.md
docker/edd/: README.md  Requirements.md
docker/flower/: Dockerfile  Pipfile  README.md  celeryconfig.py  entrypoint.sh  flowerconfig.py  healthcheck.sh
docker/nginx/: README.md  docker-compose.yml
docker/node/: Dockerfile  package.json
docker/postgres/: README.md  healthcheck.sh  upgrade.sh
docker_services/: README.md  appserver_entrypoint.sh  backup_volume.sh  certs.txt  default.conf  docker-compose.override.yml-example  docker-compose.yml  ice.yml  init-config  init-config.sh  init_entrypoint.sh  ps.txt  restore_volume.sh  secrets.env-example  start-edd.sh  stop-edd.sh  worker_entrypoint.sh
docs/: Administration.md  Configuration.md  Contributing.md  Deployment.md  Developer_Setup.md  Developer_Setup_Linux.md  Developer_Setup_Mac.md  Developer_Setup_Running.md  Docker.md  EDD-Core.md  FAQ.md  Interface.md  Legal.md  Migration_2.5_to_2.6.md  Migration_2.6_to_2.7.md  Python_Environment.md  Releasing.md  Requirements.md  Troubleshooting.md  Tutorials.md  Use_Cases.md  User_Stories.md  index.md
edd/: __init__.py  asgi.py  celery.py  celeryconfig.py  flowerconfig.py  hplc_parser.py  local_settings.py-example  remote_tasks.py  schema.py  settings.py  settings_prod.py  test_settings.py  urls.py  utilities.py  wsgi.py
edd/notify/: tests.py  (+3 more)
edd_file_importer/: __init__.py  admin.py  apps.py  codes.py  models.py  signals.py  tasks.py  urls.py  utilities.py  views.py
edd_utils/: celery_utils.py  cytometry.py  data_excelreader.py  data_map_ecdata.py  form_utils.py  gc_ms_workbench.py  math.py  process_histogram.py  tests.py  urls.py  views.py
jbei/: README.md  __init__.py  django-drf-requirements.txt  requirements.txt  tests.py  utils.py
main/: __init__.py  admin.py  apps.py  autocomplete.py  constants.py  consumers.py  data_excelreader.py  data_export.py  data_import.py  data_map_ecdata.py  data_map_hplc.py  data_parser_hplc.py  forms.py  hash.py  ice.py  models.py  redis.py  routing.py  sbml_export.py  schema.py  solr.py  tasks.py  tests.py  urls.py  utilities.py  views.py
pa11y/: .env.example  README.md  actions.js  index.js  package-lock.json  package.json  utilities.js
server/: .coveragerc  manage.py  pyproject.toml  pytest.ini
settings/: example
setup/: README.md  tasks.py
solr/: solr.xml  studies.xml  users.xml
startup-tasks/: __init__.py  prereq.py  util.py
tests/: EDDData.json  SpecRunner.html  assay.json  edd-editable-element_spec.js  karma.conf.js  line_graph_helper_methods_spec.js  study-line_spec.js
typescript/: .eslintrc.js  AdminMetabolicMaps.ts  AssayTableData.ts  AssayTableDataEdit.ts  AssayTableDataGraphing.ts  Autocomplete.ts  BiomassCalculationUI.ts  CarbonSummation.ts  DataGrid.ts  DataGridServerSide.ts  Disclosure.ts  Dragboxes.ts  EDDDataInterface.ts  EDDEditing.ts  EditableElement.ts  LineTableData.ts  PermissionsDialog.ts  Study.ts  StudyCarbonBalance.ts  StudyGraphing.ts  StudySBMLExport.ts  Utl.ts  index.ts  jest.config.js  tsconfig.json  tslint.json  tslint.yaml  webpack.config.js
typescript-bs5/: webpack.config.js
(+1778 files in other folders)
