[tool.black]
target-version = ["py312"]

[tool.poetry]
name = "edd"
version = "3.0.0.dev0"
description = "Online repository of standardized biological experimental data and metadata."
license = "BSD-3-Clause"
authors = [
    "William Morrell <WCMorrell@lbl.gov>",
]
maintainers = [
    "William Morrell <WCMorrell@lbl.gov>",
    "Steve Lane <SDLane@lbl.gov>",
]
readme = "README.md"
homepage = "https://public-edd.jbei.org/"
repository = "https://github.com/JBEI/EDD"
documentation = "https://edd-docs.jbei.org/"
packages = [
    { from = "server", include = "edd" },
    { from = "server", include = "main" },
    { from = "server", include = "jbei" },
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.12"

arrow = "^1.2.3"
boto3 = "^1.26.148"
celery = "^5.3.0"
channels = "^4.0.0"
channels-redis = "^4.0.0"
chardet = "^5.1.0"
daphne = "^4.0.0"
django = "^4.2.2"
django-allauth = "^0.58.2"
django-auth-ldap = "^4.3.0"
django-environ = "^0.11.2"
django-filter = "^23.2"
django-redis = "^5.2.0"
django-storages = "^1.13.2"
django-threadlocals = "^0.10"
djangorestframework = "^3.14.0"
djangorestframework-csv = "^2.1.1"
djangorestframework-simplejwt = "^5.2.2"
drf-nested-routers = "^0.93.4"
drf-yasg = "^1.21.5"
gevent = "^23.9.1"
graphene = "^2.1.9"
graphene-django = "==2.15.0"
gunicorn = "^21.2.0"
invoke = "^2.1.2"
numpy = "^1.24.3"
openpyxl = "==3.0.10"
pillow = "^10.0.1"
psycopg = {extras = ["binary"], version = "^3.1.9"}
python-libsbml = "^5.20.1"
rdflib = "^7.0.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.15"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
django-debug-toolbar = "^4.1.0"
factory-boy = "^3.2.1"
faker = "^19.6.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-django = "^4.5.2"
time-machine = "^2.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-bootswatch = "^1.1"
pygments = "^2.15.1"
pymdown-extensions = "^10.0.1"

[tool.ruff]
fix = true
line-length = 99
select = ["E", "F", "W", "C90", "I"]
src = ["server", "setup", "startup-tasks"]
target-version = "py311"
